// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The NationalDeliveryFulfilment stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
      "GuRole",
      "GuAllowPolicy",
      "GuAllowPolicy",
      "GuAllowPolicy",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuenationaldeliveryfulfilmentCODEsupplierRoleArnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/national-delivery-fulfilment/CODE/supplierRoleArn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AllowFulfilmentBucketGetFilesPolicy8F0279D0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-national-delivery-fulfilment-code/fulfilment/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowFulfilmentBucketGetFilesPolicy8F0279D0",
        "Roles": [
          {
            "Ref": "AllowFulfilmentBucketRoleCODEF7ECC988",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowFulfilmentBucketPolicy2CD95F99": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-national-delivery-fulfilment-code",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowFulfilmentBucketPolicy2CD95F99",
        "Roles": [
          {
            "Ref": "AllowFulfilmentBucketRoleCODEF7ECC988",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowFulfilmentBucketPutFailedDeliveryPolicy23D77015": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject",
                "s3:PutObject",
              ],
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-national-delivery-fulfilment-code/failed-deliveries/uploads/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowFulfilmentBucketPutFailedDeliveryPolicy23D77015",
        "Roles": [
          {
            "Ref": "AllowFulfilmentBucketRoleCODEF7ECC988",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowFulfilmentBucketRoleCODEF7ECC988": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Ref": "SsmParameterValuenationaldeliveryfulfilmentCODEsupplierRoleArnC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": "SandboxPaperroundAccess",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DataBucketE3889A50": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketName": "gu-national-delivery-fulfilment-code",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "ErrorExecutionAlarm9DD60FED": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "national-delivery-fulfilment: error while executing lambda",
        "AlarmName": "national-delivery-fulfilment: error",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": "membership-national-delivery-fulfilment-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "nationaldeliveryfulfilmentlambda2870F422": {
      "DependsOn": [
        "nationaldeliveryfulfilmentlambdaServiceRoleDefaultPolicy8EA432E5",
        "nationaldeliveryfulfilmentlambdaServiceRole616D4F71",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/national-delivery-fulfilment/national-delivery-fulfilment.zip",
        },
        "Description": "A lambda to handle fulfilment for national delivery",
        "Environment": {
          "Variables": {
            "APP": "national-delivery-fulfilment",
            "STACK": "membership",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "membership-national-delivery-fulfilment-CODE",
        "Handler": "national-delivery-fulfilment/index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "nationaldeliveryfulfilmentlambdaServiceRole616D4F71",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "national-delivery-fulfilment",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "nationaldeliveryfulfilmentlambdaServiceRole616D4F71": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "national-delivery-fulfilment",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "nationaldeliveryfulfilmentlambdaServiceRoleDefaultPolicy8EA432E5": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/national-delivery-fulfilment/national-delivery-fulfilment.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/national-delivery-fulfilment",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/national-delivery-fulfilment/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:PutObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "DataBucketE3889A50",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "nationaldeliveryfulfilmentlambdaServiceRoleDefaultPolicy8EA432E5",
        "Roles": [
          {
            "Ref": "nationaldeliveryfulfilmentlambdaServiceRole616D4F71",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "nationaldeliveryfulfilmentlambdanationaldeliveryfulfilmentlambdacron3009BF94F13": {
      "Properties": {
        "ScheduleExpression": "cron(30 * * * ? *)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "nationaldeliveryfulfilmentlambda2870F422",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "nationaldeliveryfulfilmentlambdanationaldeliveryfulfilmentlambdacron300AllowEventRuleNationalDeliveryFulfilmentCODEnationaldeliveryfulfilmentlambda83C15CF27F01F0A8": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "nationaldeliveryfulfilmentlambda2870F422",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "nationaldeliveryfulfilmentlambdanationaldeliveryfulfilmentlambdacron3009BF94F13",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;

exports[`The NationalDeliveryFulfilment stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
      "GuRole",
      "GuAllowPolicy",
      "GuAllowPolicy",
      "GuAllowPolicy",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuenationaldeliveryfulfilmentPRODsupplierRoleArnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/national-delivery-fulfilment/PROD/supplierRoleArn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AllowFulfilmentBucketGetFilesPolicy8F0279D0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-national-delivery-fulfilment-prod/fulfilment/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowFulfilmentBucketGetFilesPolicy8F0279D0",
        "Roles": [
          {
            "Ref": "AllowFulfilmentBucketRolePRODE7CF8AE4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowFulfilmentBucketPolicy2CD95F99": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-national-delivery-fulfilment-prod",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowFulfilmentBucketPolicy2CD95F99",
        "Roles": [
          {
            "Ref": "AllowFulfilmentBucketRolePRODE7CF8AE4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowFulfilmentBucketPutFailedDeliveryPolicy23D77015": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject",
                "s3:PutObject",
              ],
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-national-delivery-fulfilment-prod/failed-deliveries/uploads/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AllowFulfilmentBucketPutFailedDeliveryPolicy23D77015",
        "Roles": [
          {
            "Ref": "AllowFulfilmentBucketRolePRODE7CF8AE4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AllowFulfilmentBucketRolePRODE7CF8AE4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Ref": "SsmParameterValuenationaldeliveryfulfilmentPRODsupplierRoleArnC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": "ProductionPaperroundAccess",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DataBucketE3889A50": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketName": "gu-national-delivery-fulfilment-prod",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "ErrorExecutionAlarm9DD60FED": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "national-delivery-fulfilment: error while executing lambda",
        "AlarmName": "national-delivery-fulfilment: error",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": "membership-national-delivery-fulfilment-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "nationaldeliveryfulfilmentlambda2870F422": {
      "DependsOn": [
        "nationaldeliveryfulfilmentlambdaServiceRoleDefaultPolicy8EA432E5",
        "nationaldeliveryfulfilmentlambdaServiceRole616D4F71",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/national-delivery-fulfilment/national-delivery-fulfilment.zip",
        },
        "Description": "A lambda to handle fulfilment for national delivery",
        "Environment": {
          "Variables": {
            "APP": "national-delivery-fulfilment",
            "STACK": "membership",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "membership-national-delivery-fulfilment-PROD",
        "Handler": "national-delivery-fulfilment/index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "nationaldeliveryfulfilmentlambdaServiceRole616D4F71",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "national-delivery-fulfilment",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "nationaldeliveryfulfilmentlambdaServiceRole616D4F71": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "national-delivery-fulfilment",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/national-delivery-fulfilment",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "nationaldeliveryfulfilmentlambdaServiceRoleDefaultPolicy8EA432E5": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/national-delivery-fulfilment/national-delivery-fulfilment.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/national-delivery-fulfilment",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/national-delivery-fulfilment/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:PutObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "DataBucketE3889A50",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "nationaldeliveryfulfilmentlambdaServiceRoleDefaultPolicy8EA432E5",
        "Roles": [
          {
            "Ref": "nationaldeliveryfulfilmentlambdaServiceRole616D4F71",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "nationaldeliveryfulfilmentlambdanationaldeliveryfulfilmentlambdacron3009BF94F13": {
      "Properties": {
        "ScheduleExpression": "cron(30 * * * ? *)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "nationaldeliveryfulfilmentlambda2870F422",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "nationaldeliveryfulfilmentlambdanationaldeliveryfulfilmentlambdacron300AllowEventRuleNationalDeliveryFulfilmentPRODnationaldeliveryfulfilmentlambda8B0CC48557D9E833": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "nationaldeliveryfulfilmentlambda2870F422",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "nationaldeliveryfulfilmentlambdanationaldeliveryfulfilmentlambdacron3009BF94F13",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
